Fix bottom margin of document paragaphs

--- a/packages/styles/document_detail.import.styl
+++ b/packages/styles/document_detail.import.styl
@@ -200,7 +200,7 @@ $colors = rgba(222, 178, 116, 1) rgba(249, 134, 127, 1) rgba(117, 198, 167, 1) r
     top 0
     z-index -1
     p
-      margin-bottom: 1.55em
+      margin-bottom 1.57em
 
     for $color, $index in $colors
       .annotation-color-{$index+1}
